improved and made some new changes
optimization and projects cards updated

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     
     <!-- SEO Meta Tags -->
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://tiwariom.netlify.app/" />
     <meta property="og:title" content="Om Tiwari | Aspiring AI/ML Engineer & MERN Stack Developer" />
     <meta property="og:description" content="Om Tiwari is an aspiring AI/ML engineer and full-stack developer skilled in Python, Machine Learning, and the MERN stack. Explore projects, skills, and achievements." />
-    <meta property="og:image" content="https://tiwariom.netlify.app/preview.png" />
+    <meta property="og:image" content="https://tiwariom.netlify.app/potfolio_image.jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Om Tiwari - Aspiring AI/ML Engineer & MERN Stack Developer Portfolio" />
@@ -32,7 +32,7 @@
     <meta name="twitter:url" content="https://tiwariom.netlify.app/" />
     <meta name="twitter:title" content="Om Tiwari | Aspiring AI/ML Engineer & MERN Stack Developer" />
     <meta name="twitter:description" content="Om Tiwari is an aspiring AI/ML engineer and full-stack developer skilled in Python, Machine Learning, and the MERN stack. Explore projects, skills, and achievements." />
-    <meta name="twitter:image" content="https://tiwariom.netlify.app/preview.png" />
+    <meta name="twitter:image" content="https://tiwariom.netlify.app/potfolio_image.jpeg" />
     <meta name="twitter:image:alt" content="Om Tiwari - Aspiring AI/ML Engineer & MERN Stack Developer Portfolio" />
     <meta name="twitter:creator" content="@omtiwari" />
     <meta name="twitter:site" content="@omtiwari" />
@@ -43,7 +43,7 @@
     <!-- WhatsApp -->
     <meta property="whatsapp:title" content="Om Tiwari | Aspiring AI/ML Engineer & MERN Stack Developer" />
     <meta property="whatsapp:description" content="Check out my portfolio - AI/ML projects, MERN stack development, and competitive programming achievements!" />
-    <meta property="whatsapp:image" content="https://tiwariom.netlify.app/preview.png" />
+    <meta property="whatsapp:image" content="https://tiwariom.netlify.app/potfolio_image.jpeg" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://tiwariom.netlify.app/" />
@@ -81,7 +81,7 @@
       "jobTitle": "Aspiring AI/ML Engineer & MERN Stack Developer",
       "description": "Aspiring AI/ML engineer and full-stack developer skilled in Python, Machine Learning, and the MERN stack. Computer Engineering student from Mumbai University.",
       "url": "https://tiwariom.netlify.app",
-      "image": "https://tiwariom.netlify.app/preview.png",
+      "image": "https://tiwariom.netlify.app/potfolio_image.jpeg",
       "alumniOf": {
         "@type": "EducationalOrganization",
         "name": "Mumbai University",
